rebind split toggle

--- a/.config/hypr/overrides/bindings.conf
+++ b/.config/hypr/overrides/bindings.conf
@@ -15,7 +15,7 @@ $right = L
 # J defaults to togglesplit, so unbind it.
 unbind = SUPER, J
 unbind = SUPER, K
-# bind = SUPER, J, togglesplit, # dwindle
+bind = SUPER, W, togglesplit, # dwindle
 # bind = SUPER, M, exec, pkill wofi || ~/.local/share/omarchy/bin/omarchy-menu-keybindings
 
 # Remove default bindings
