updated hyprland config structure

--- a/.config/hypr/overrides/bindings.conf
+++ b/.config/hypr/overrides/bindings.conf
@@ -41,3 +41,12 @@ bind = SUPER SHIFT, $left, swapwindow, l
 bind = SUPER SHIFT, $right, swapwindow, r
 bind = SUPER SHIFT, $up, swapwindow, u
 bind = SUPER SHIFT, $down, swapwindow, d
+
+# Resize active window
+unbind = SUPER, minus
+unbind = SUPER, equal
+unbind = SUPER SHIFT, minus
+unbind = SUPER SHIFT, equal
+
+bind = SUPER ALT, $left, resizeactive, -100 0
+bind = SUPER ALT, $right, resizeactive, 100 0
