moved unbinds out of default file

--- a/.config/hypr/overrides/bindings.conf
+++ b/.config/hypr/overrides/bindings.conf
@@ -50,3 +50,14 @@ unbind = SUPER SHIFT, equal
 
 bind = SUPER ALT, $left, resizeactive, -100 0
 bind = SUPER ALT, $right, resizeactive, 100 0
+
+# Unused apps
+unbind = SUPER, G # Signal
+unbind = SUPER, O # Obsidian
+unbind = SUPER SHIFT, G # WhatsApp
+unbind = SUPER ALT, G # Google Messages
+unbind = SUPER, slash # Passwords
+unbind = SUPER, C # Calendar
+unbind = SUPER, E # Email
+unbind = SUPER, X # X
+unbind = SUPER SHIFT, X # X Post
