--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -7,7 +7,7 @@ env = GDK_SCALE,1
 # Use single default monitor (see all monitors with: hyprctl monitors)
 # Format: monitor = [port], resolution, position, scale
 monitor = DP-1, 5120x1440@240, 0x0, 1
-monitor = HDMI-A-1, 2560x1440@144, 1280x-1440, 1
+# monitor = HDMI-A-1, 2560x1440@144, 1280x-1440, 1
 
 # Exmaple for fractional scaling that works well with GDK_SCALE,1.75
 # monitor=,preferred,auto,1.666667
