--- a/.config/hypr/overrides/bindings.conf
+++ b/.config/hypr/overrides/bindings.conf
@@ -52,12 +52,12 @@ bind = SUPER ALT, $left, resizeactive, -100 0
 bind = SUPER ALT, $right, resizeactive, 100 0
 
 # Unused apps
-unbind = SUPER, G # Signal
-unbind = SUPER, O # Obsidian
-unbind = SUPER SHIFT, G # WhatsApp
-unbind = SUPER ALT, G # Google Messages
-unbind = SUPER, slash # Passwords
-unbind = SUPER, C # Calendar
-unbind = SUPER, E # Email
-unbind = SUPER, X # X
-unbind = SUPER SHIFT, X # X Post
+unbind = SUPER SHIFT, G # Signal
+unbind = SUPER SHIFT, O # Obsidian
+unbind = SUPER SHIFT ALT, G # WhatsApp
+unbind = SUPER SHIFT ALT, G # Google Messages
+unbind = SUPER SHIFT, slash # Passwords
+unbind = SUPER SHIFT, C # Calendar
+unbind = SUPER SHIFT, E # Email
+unbind = SUPER SHIFT, X # X
+unbind = SUPER SHIFT ALT, X # X Post
